--- a/index.html
+++ b/index.html
@@ -92,21 +92,80 @@
 			</div>
 		</div>
 	</div>
-	<div class="skillsection">
+	<div class="skillsection spacer">
 		<div class="container">
 			<div class="skillgrid">
-				<div class="logogrid">
-					<img src="images/icon/beaver.png" alt="vector art" class="fadeup">
-					<img src="images/icon/duda.png" alt="vector art" class="fadeup">
-					<img src="images/icon/elementor.png" alt="vector art" class="fadeup">
-					<img src="images/icon/figma.png" alt="vector art" class="fadeup">
-					<img src="images/icon/wordpress.png" alt="vector art" class="fadeup">
-					<img src="images/icon/ps.png" alt="vector art" class="fadeup">
-					<img src="images/icon/n1.png" alt="vector art" class="fadeup">
-					<img src="images/icon/n2.png" alt="vector art" class="fadeup">
-				</div>
 				<div class="vectorimg fadein">
+					<div class="offerheading">
+						<h2 class="sub-heading">Why Choose Me</h2>
+						<h2 class="parenthead">MY EXPERTISE AREA</h2>
+					</div>
 					<img src="images/Vector.png" alt="vector art">
+				</div>
+				<div class="logogrid">
+					<div class="ui-section">
+						<h2><span id="title-red">UI/UX</span> Design</h2>
+						<div class="ui-grid">
+							<figure class="fadeup">
+								<img src="images/icon-black-white/figma.PNG" alt="Figma">
+								<figcaption>Figma</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/photopea.PNG" alt="Photopea">
+								<figcaption>Photopea</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/photoshop.PNG" alt="Adobe Photoshop">
+								<figcaption>Adobe Photoshop</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/illustrator.PNG" alt="Adobe Illustrator">
+								<figcaption>Adobe Illustrator</figcaption>
+							</figure>
+						</div>
+					</div>
+					<div class="web-section">
+						<h2><span id="title-red">WordPress</span> Development</h2>
+						<div class="web-grid">
+							<figure class="fadeup">
+								<img src="images/icon-black-white/beaver builder.PNG" alt="Beaver Builder">
+								<figcaption>Beaver Builder</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/woocommerce.PNG" alt="WooCommerce">
+								<figcaption>WooCommerce</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/elementor.PNG" alt="Elementor">
+								<figcaption>Elementor</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/duda.PNG" alt="Duda Builder">
+								<figcaption>Duda Builder</figcaption>
+							</figure>
+						</div>
+					</div>
+					<div class="vec-section">
+						<h2><span id="title-red">Front-End</span> Development</h2>
+						<div class="vec-grid">
+							<figure class="fadeup">
+								<img src="images/icon-black-white/html.PNG" alt="HTML">
+								<figcaption>HTML</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/css.PNG" alt="CSS">
+								<figcaption>CSS</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/js.PNG" alt="JavaScript">
+								<figcaption>JavaScript</figcaption>
+							</figure>
+							<figure class="fadeup">
+								<img src="images/icon-black-white/bootstrap.PNG" alt="Bootstrap">
+								<figcaption>Bootstrap</figcaption>
+							</figure>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -120,17 +179,17 @@
 				</div>
 				<div class="offergrid">
 					<div class="service-box1 s-box hidden">
-						<img src="images/icon/icon3 (1).png" alt="">
+						<img src="images/icon-black-white/icon1 (1).png" alt="">
 						<h2>Web Design & Developer</h2>
 						<p>I specialize in creating customized web solutions and WordPress websites that empower businesses to establish a strong online&nbsp;presence.</p>
 					</div>
 					<div class="service-box2 s-box hidden">
-						<img src="images/icon/icon1 (1).png" alt="">
+						<img src="images/icon-black-white/icon2 (1).png" alt="">
 						<h2>Design QA/QC Certified</h2>
 						<p>I offer top-notch web quality assurance and quality control services to ensure that your website meets the highest standards of functionality, usability, and&nbsp;performance.</p>						
 					</div>
 					<div class="service-box3 s-box hidden">
-						<img src="images/icon/icon2 (1).png" alt="">
+						<img src="images/icon-black-white/icon3 (1).png" alt="">
 						<h2>Vector Art & Design</h2>
 						<p>I specialize in creating captivating and versatile vector art that brings your ideas to life. With a keen eye for detail and a passion for creativity, I create stunning portrait vector, logos, banner tarpaulin, and&nbsp;more.</p>						
 					</div>
@@ -146,7 +205,7 @@
 				<div class="worktxt fadeup">
 					<h2 class="sub-heading">My Portfolio</h2>
 					<h2 class="parenthead">RECENT WORKS</h2>
-					<p>Explore a dynamic blend of creativity and functionality in my recent works portfolio. Dive into a world of captivating web design, where user-friendly interfaces meet stunning visuals, and discover the vibrant realm of vector artistry, where precision meets imagination. Join me on a journey where websites come to life, and vector graphics paint stories with every line.</p>
+					<p>Explore a dynamic blend of creativity and functionality in my recent works portfolio. Dive into a world of captivating web design, where user-friendly interfaces meet stunning visuals, and discover the vibrant realm of vector artistry, where precision meets imagination.</p>
 					<a href="https://www.behance.net/jonathanambatali" target="_blank">View More &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 				</div>
 			</div>
