--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<li><a href="/devcodeportfolio/">home</a></li>
 							<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 							<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
-							<li><a target="_blank" href="images/resume/Ambatali_CV.pdf">Hire Me</a></li>
+							<li><a target="_blank" href="images/resume/Ambatali_CV_updated.pdf">Hire Me</a></li>
 						</ul>
 				</nav>
 			</div>
@@ -62,32 +62,28 @@
 						</ul>
 					  </div>
 					<p>I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. </p>
-					<a target="_blank" href="images/resume/Ambatali_CV.pdf">Download CV &nbsp;<i class="fa-solid fa-download"></i></a>
+					<a target="_blank" href="images/resume/Ambatali_CV_updated.pdf">Download CV &nbsp;<i class="fa-solid fa-download"></i></a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="aboutme" class="aboutsection spacer">
+	<div id="aboutme" class="aboutsection">
 		<div class="container">
 			<div class="aboutgrid">
 				<div class="col-intro fadein">
 					<h2 class="sub-heading">My Intro</h2>
 					<h2 class="parenthead">ABOUT ME</h2>
-					<p>I'm Nathan, a versatile creative professional at the intersection of web development and vector artistry. I craft engaging digital experiences through web design and bring visuals to life with the precision of vector graphics.</p>
+					<p>
+					Hi there! I'm Ambatali Jonathan, and I began my web development journey in 2018 as an <b>Associate Web Developer</b>. Along the way, I've focused on perfecting my skills, specializing in making visually engaging websites using WordPress and tools like Beaver Builder or Elementor.
+					<br><br>
+					My dedication and standout contributions earned me a promotion to <b>Senior Associate Web Developer</b>. I also play a crucial role in the <b>Design QA Team</b>, ensuring flawless project execution and delivering error-free outcomes.</p>
 					<div class="years">
 						<h3 class="noyears">05</h3>
 						<h3 class="expyear">Years of Experience</h3>
 					</div>
 				</div>
-				<div class="discussion fadein">
-					<h2 class="parenthead">Any Type of Query &&nbsp;Discussion.</h2>
-					<p class="letstxt">Let’s talk with me</p>
-					<center>
-					<a href="https://www.behance.net/jonathanambatali" target="_blank"><i class="fa-brands fa-behance"></i> &nbsp;behance.net/jonathanambatali </a>
-					<a href="mailto:jonathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i> &nbsp;jonathanambatali07@gmail.com </a>
-					<a href="mailto:nathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i> &nbsp;nathanambatali07@gmail.com </a>
-					<a href="tel:+639760181159"><i class="fa-solid fa-phone"></i> &nbsp;+63 (976) 018 1159 </a>
-					</center>
+				<div class="behance-img fadein">
+					<img src="images/about-main-f.webp" alt="Behance" class="fadein">
 				</div>
 			</div>
 		</div>
@@ -333,12 +329,19 @@
 	<div class="projectoffer spacer">
 		<div class="container">
 			<div class="projectgrid">
-				<div class="projectimg fadein">
-					<img src="images/showcase.webp" alt="Project Showcase">
+				<div class="discussion fadein">
+					<h2 class="parenthead">Any Type of Query &&nbsp;Discussion.</h2>
+					<p class="letstxt">Let’s talk with me</p>
+					<center>
+					<a href="tel:+639760181159"><i class="fa-solid fa-phone"></i> &nbsp;+63 (976) 018 1159 </a>		
+					<a href="mailto:jonathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i> &nbsp;jonathanambatali07@gmail.com </a>
+					<a href="https://www.behance.net/jonathanambatali" target="_blank"><i class="fa-brands fa-behance"></i> &nbsp;behance.net/jonathanambatali </a>
+					<a href="https://www.linkedin.com/in/jonathan-ambatali/" target="_blank"><i class="fa-brands fa-linkedin"></i> &nbsp;linkedin.com/in/jonathan-ambatali </a>
+					</center>
 				</div>
 				<div class="projecttxt fadeup">
-					<h2 class="parenthead">Have a Project On&nbsp;Your Mind</h2>
-					<p>Contact me today to discuss your project and embark on an exciting journey of web development and vector artistry!</p>						
+					<h2 class="parenthead">Have a Project On&nbsp;Your&nbsp;Mind</h2>
+					<p>Contact me today to discuss your project and embark on an exciting journey of web development and vector&nbsp;artistry!</p>						
 					<a href="tel:+639760181159">Contact Me &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 				</div>
 			</div>
@@ -355,7 +358,7 @@
 						<li><a href="/devcodeportfolio/">home</a></li>
 						<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 						<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
-						<li><a target="_blank" href="images/resume/Ambatali_CV.pdf">Hire Me</a></li>
+						<li><a target="_blank" href="images/resume/Ambatali_CV_updated.pdf">Hire Me</a></li>
 					</ul>
 				</div>
 			</div>
